--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "swr": "^2.2.0"
   },
   "devDependencies": {
+    "@types/node": "^24.1.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.13",
     "prisma": "^5.0.0",
